# pygottado

./: .gitignore  README.md  pyproject.toml  requirements.txt
pygottado/: __init__.py  main.py
pygottado/data/: tasks.json
pygottado/utils/: __init__.py  classes.py  constants.py  functions.py
tests/: custom_fixtures.py  test_cases.py  test_functions.py
