[tool.poetry]
name = "pygottado"
version = "0.3.0"
description = "A simple command line todo app written in python"
authors = ["kayraze <jadenspitzky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
termcolor = "^2.5.0"
black = "^24.10.0"
mypy = "^1.13.0"
aiofiles = "^24.1.0"
pytest = "^8.3.3"
types-aiofiles = "^24.1.0.20240626"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
deprecated = "^1.2.14"
types-deprecated = "^1.2.9.20240311"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
pygottado = "pygottado.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
